<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background_calculate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCalculate">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <LinearLayout
        android:id="@+id/linearLayoutInputOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTV"
        app:layout_constraintVertical_bias="0.1">

        <EditText
            android:id="@+id/firstOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8pt"
            android:inputType="number"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/secondOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8pt"
            android:inputType="number"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutChoiceOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutInputOperand"
        app:layout_constraintVertical_bias="0.1">

        <Button
            android:id="@+id/buttonSummBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonSummBTN"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/buttonDiffBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonDiffBTN"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/buttonMultBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonMultBTN"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/buttonDivBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonDivBTN"
            android:textSize="22sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/resultCalculateTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:text="@string/resultTV"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutChoiceOperator"
        app:layout_constraintVertical_bias="0.1"/>

    <LinearLayout
        android:id="@+id/linearLayoutResetExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultCalculateTV"
        app:layout_constraintVertical_bias="0.1">

        <Button
            android:id="@+id/buttonLoadtoMainBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonLoadToMainBTN"
            android:textSize="22sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>